<resources>
    <string name="app_name">Team manager</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_jugadores">Gestion invitaciones</string>
    <string name="title_activity_nuevo_grupo">Registro de equipos</string>
    <string name="acept">Aceptar</string>
    <string name="cambiar">Cambiar</string>
    <string name="invitacion">Invita a tus amigos a descargarse app Team Megasur\n y unirse a tu equipo.\n
                              Solo tienes que seleccionar equipo y escribir el correo electronico de la persona que desees invitar.</string>
    <string name="multa">Selecciona un jugador de la lista y marca el tipo de sancion que va imponer. \n
                         Pulse aceptar para imponer sancion y si quieres notificar al usuario de la sancion impuesta pulse el boton de notificar.</string>
    <string name="cerrar">Cerrar</string>
    <string name="cancel">Cancelar</string>
    <string name="msj_cerrar">¿Está seguro que quiere salir de la aplicacion?</string>
    <string name="msj_desconectar">¿Está seguro que quiere cerrar sesion?</string>
    <string name="title_activity_gestion_equipo">Gestion de equipo</string>
    <string name="text_añadir_jugador">Inserte el correo del jugador que quiera añadir.\nRecuerde que el correo debe estar registrado para poder añadirlo al equipo.</string>
    <string name="text_seleccionar_peña">Seleccione en la lista el equipo que va disputar el partido.</string>
    <string name="text_pref">Establezca la cantidad deseada en cada tipo de multa.</string>
    <string name="title_activity_partido">Partido</string>
    <string name="ganador_partido">Partido finalizado\n
                                  El ganador del partido ha sido : </string>
    <string name="title_activity_multa">Multas</string>
    <string name="lista_partido">Seleccione los jugadores de la lista que disputaran el partido.\n
                                 Cuando esten todos añadidos pulse sortear.</string>
    <string name="title_activity_administracion">Administracion</string>
    <string name="title_activity_partidos">Partidos</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_editar_equipo">Editar Equipo</string>
    <string name="title_activity_editar_perfil">Editar Perfil</string>
    <string name="title_activity_gestion_multa">TM</string>
    <string name="title_activity_gestion_estadisticas">TM</string>
    <string name="title_activity_gestion_partidos">TM</string>
    <string name="title_activity_gestion_cuenta">Gestion cuenta</string>
    <string name="title_activity_gestion_administrador">TM</string>
    <string name="jugador_exp">Jugador expulsado.</string>
    <string name="no_pag">No pagado.</string>
    <string name="seleccion_equipo">Seleccione equipo que va administrar.</string>
    <string name="load">Cargando...</string>
    <string name="jugador_administrador">El jugador seleccionado es el administrador de este equipo, no se puede eliminar. Para cambiar de administrador desde el menu administrar-cuenta podrá gestionarlo.</string>
    <string name="no_comp">No hay componentes.</string>
    <string name="equipo_delete">¿Esta seguro que desea eliminar permanentemente este equipo?</string>
    <string name="componentes">Componentes</string>
    <string name="act">Actualizando...</string>
    <string name="equip_act">Equipo actualizado correctamente.</string>
    <string name="borra">Borrando...</string>
    <string name="perfil_act">Perfil actualizado.</string>
    <string name="estad">Estadisticas</string>
    <string name="goleadores">Goleadores</string>
    <string name="puntuaciones">Puntuaciones</string>
    <string name="usuario_no_equipo">No esta registrado en ningun equipo del que mostrar estadisiticas</string>
    <string name="administrador_no">Si acepta usted dejara de ser administrador y no podra gestionar este equipo.</string>
    <string name="datos_act">Datos actualizados</string>
    <string name="administrador_borr">Usted es administrador de un equipo antes de borrar su usuario debe indicar un nuevo administrador</string>
    <string name="baja_usu">¿Esta seguro que desea dar de baja su cuenta con Team Manager?</string>
    <string name="debe">.Debe rellenar todos los campos.</string>
    <string name="pass_no_coincide">"La contraseña nueva introducida no coincide en los dos campos."</string>
    <string name="pass_error">La conraseña actual introducida no es correcta.</string>
    <string name="eliminar">Eliminando...</string>
    <string name="usu_repe">El usuario introducido ya es componente de este equipo.</string>
    <string name="compentes"> componentes</string>
    <string name="comp"> componente</string>
    <string name="add">Añadiendo...</string>
    <string name="usu_no_reg">El usuario introducido no esta aún registrado en la aplicacion.</string>
    <string name="reset_estad">¿Esta seguro que desea resetear los datos de estadisticas?, los valores se estableceran a 0.</string>
    <string name="reset">Reseteando...</string>
    <string name="datos_res">Datos restablecidos.</string>
    <string name="reset_part">Esta seguro que desea resetear los datos de partidos?, se perderan todos los datos.</string>
    <string name="invi">Seleccione el equipo del que se va enviar una invitacion.</string>
    <string name="correo_valid">Inserte al menos un correo valido.</string>
    <string name="email_enviado">El email ha sido enviado.</string>
    <string name="invi_tm">Invitacion Team Manager</string>
    <string name="rellene_campos">Rellene todos los campos.</string>
    <string name="conexion_limi">Conexion limitada o nula, comprueba tu conexion.</string>
    <string name="login_eror">Correo o contraseña erroneos.</string>
    <string name="comprob">Comprobando...</string>
    <string name="problem_serv">Problema de conexion con el servidor.</string>
    <string name="admin_res">Solo los administradores pueden gestionar un partido.</string>
    <string name="user_log_incorrect">Usuario o contraseña incorrectos.</string>
    <string name="soporte">soporteteammanager@gmail.com</string>
    <string name="notifi">Se ha notificado mediante email al usuario</string>
    <string name="saved">Guardando...</string>
    <string name="multa_guardada">Multa guardada.</string>
    <string name="campos_oblig">Rellene los campos obligatorios.</string>
    <string name="oblig">Obligatorio</string>
    <string name="creando">Creando peña...</string>
    <string name="equipo_repe">Ya existe una peña registrada con este nombre y administrador. Pruebe con otro nombre</string>
    <string name="equipo_creado">Equipo creado correctamente</string>
    <string name="error_conect">Error al conectar.</string>
    <string name="iniciar">INICIAR SESION</string>
    <string name="registro">REGISTRO</string>
    <string name="text_info_admin">No eres administrador de ningun equipo</string>
    <string name="text_info_admin_nuevo">Seleccione el equipo que va gestionar, elija de la lista el nuevo administrador y pulse el boton de cambiar</string>
    <string name="text_comp">Componentes equipo</string>
    <string name="text_nombre">Nombre</string>
    <string name="text_no_asistencia">Falta asistencia</string>
    <string name="text_pagar">Pagar</string>
    <string name="text_añadir">Añadir</string>
    <string name="text_ejemplo">ejemplo@correo.com</string>
    <string name="text_añadir_usu">Escriba correo de usuario y pulse aceptar para añadir. Asegurese que escribe correctamente el correo. Podra añadir mas de un correo.</string>
    <string name="text_amarillas">Amarillas</string>
    <string name="text_rojas">Rojas</string>
    <string name="text_goles">Goles</string>
    <string name="text_tipo_est">Tipo</string>
    <string name="text_estado">Estado</string>
    <string name="text_no_multas">No hay multas impuestas</string>
    <string name="text_nueva_pass">Nueva contraseña</string>
    <string name="text_info_pass_nueva">Escriba su contraseña actual en el primer campo y despues escriba la nueva contraseña en los dos siguientes campos</string>
    <string name="text_pass_actual">Contraseña actual</string>
    <string name="text_pass_nueva">Nueva contraseña</string>
    <string name="text_repit_pass">Repita nueva contraseña</string>
    <string name="text_actualizar">Actualizar</string>
    <string name="text_equipo">Crear equipo</string>
    <string name="text_estadis">Estadisticas</string>
    <string name="title_adminis">Administrar</string>
    <string name="title_invi_jug">Invitar jugadores</string>
    <string name="title_infor">Informacion</string>
</resources>