<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.oscar.teammanager.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/DarkOrange"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/text_nombre" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_amarillas"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_rojas"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_goles"
            android:textAlignment="center" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvEst"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ColorPrueba"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp"></ListView>

</LinearLayout>

