<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Prueba6"
        android:orientation="vertical">

        <View
            android:id="@+id/view8"
            android:layout_width="match_parent"
            android:layout_height="3dip"
            android:layout_weight="1"
            android:background="@color/ColorPrueba" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/text_nueva_pass"
            android:textColor="@color/ColorPrueba"
            android:textSize="24sp" />

        <View
            android:id="@+id/view7"
            android:layout_width="match_parent"
            android:layout_height="3dip"
            android:layout_weight="1"
            android:background="@color/ColorPrueba" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:text="@string/text_info_pass_nueva"
            android:textColor="@color/Black"
            android:textSize="11dip" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="3dip"
            android:layout_weight="1"
            android:background="@color/ColorPrueba" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/passAnt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/text_pass_actual"
                    android:inputType="textPassword"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Black" />

                <EditText
                    android:id="@+id/passNueva"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/text_pass_nueva"
                    android:inputType="textPassword"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Black" />

                <EditText
                    android:id="@+id/passRepit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/text_repit_pass"
                    android:inputType="textPassword"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Black" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="15dip"
                android:layout_weight="1"
                android:text="@string/text_actualizar"
                android:textColor="@color/Black" />

            <Button
                android:id="@+id/bCancelarFiltro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="15dip"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/Black" />

        </LinearLayout>

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="3dip"
            android:layout_weight="1"
            android:background="@color/colorPrimary" />

    </LinearLayout>
</LinearLayout>