<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Prueba6"
    android:orientation="vertical">

    <View
        android:id="@+id/view12"
        android:layout_width="match_parent"
        android:layout_height="3dip"
        android:layout_weight="1"
        android:background="@color/ColorPrueba" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:text="@string/text_añadir_usu"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="11dip" />

    <View
        android:id="@+id/view14"
        android:layout_width="match_parent"
        android:layout_height="3dip"
        android:layout_weight="1"
        android:background="@color/ColorPrueba" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/correoAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/text_ejemplo"
            android:inputType="textEmailAddress"
            android:textColor="@color/White"
            android:textColorHint="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="15dip"
            android:layout_weight="1"
            android:text="@string/text_añadir"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/bCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="15dip"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/Black" />

    </LinearLayout>

    <View
        android:id="@+id/view15"
        android:layout_width="match_parent"
        android:layout_height="3dip"
        android:layout_weight="1"
        android:background="@color/ColorPrueba" />
</LinearLayout>